caminhos de rotas

--- a/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
@@ -32,7 +32,7 @@
           <td>{{ this.usuario.telefone }}</td>
           <td>{{ this.usuario.endereco }}</td>
           <td>
-            <span class="ps-3" routerLink="/perfil">
+            <span class="ps-3" routerLink="/atualizar-colaborador/{{ this.usuario.id }}">
               <i class="bi bi-pencil-square botao-editar"></i>
             </span>
           </td>
