--- a/frontend/src/app/components/pages/colaboradores/atualizar-colaborador/atualizar-colaborador.component.html
+++ b/frontend/src/app/components/pages/colaboradores/atualizar-colaborador/atualizar-colaborador.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="usuarioFormGroup" (ngSubmit)="submit()">
         <div class="usuario-foto">
             <img src="../../assets/images/user-picture.jpg" alt="user-pic" />
-            <p name="nome" id="nome">{{ usuarioFormGroup.get("nome")?.value }}</p>
+            <p class="mt-2" name="nome" id="nome">{{ usuarioFormGroup.get("nome")?.value }}</p>
         </div>
         <div class="row">
             <div class="col form-floating pl-2 container-info">
@@ -32,12 +32,13 @@
             <button type="submit" class="btn btn-primary mt-5 button-save">Salvar</button>
         </div>
     </form>
-    <div *ngIf="isResponseOk; else errorTemplate" class="alert alert-success fade-in-up mt-3" role="alert">
-        Seu perfil foi atualizado com sucesso!
-    </div>
-    <ng-template #errorTemplate>
-        <div *ngIf="isResponseError" class="alert alert-danger mt-3 fade-in-up" role="alert">
-            Algo deu errado! Não foi possível atualizar seus dados de perfil.
-        </div>
-    </ng-template>
 </div>
+
+<div *ngIf="isResponseOk; else errorTemplate" class="alert alert-success fade-in-up mt-3" role="alert">
+    Seu perfil foi atualizado com sucesso!
+</div>
+<ng-template #errorTemplate>
+    <div *ngIf="isResponseError" class="alert alert-danger mt-3 fade-in-up" role="alert">
+        Algo deu errado! Não foi possível atualizar seus dados de perfil.
+    </div>
+</ng-template>
