--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <div class="container text-center my-5">
     <form [formGroup]="usuarioFormGroup" (ngSubmit)="submit()">
         <div class="usuario-foto">
-            <img src="../../assets/images/user-picture.jpg" alt="user-pic" />
+            <img src="../../assets/images/sem_foto.png" alt="user-pic" />
             <p class="mt-2" name="nome" id="nome">{{ usuarioFormGroup.get("nome")?.value }}</p>
         </div>
         <div class="row">
