--- a/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/admin/admin.component.css
@@ -61,7 +61,7 @@
     width: 90%;
     transform: translate(-1%);
   }
-
+  /*
   .cartaoChart{
     
   }
@@ -71,6 +71,7 @@
     height: 85%;
     width: 90%;
   }
+  */
 }
 
 .titulo1 {
