--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -1,5 +1,8 @@
 
 <!-- testando cherry-pick -->
+<!-- testando cherry-pick -->
+<!-- testando cherry-pick -->
+<!-- testando cherry-pick -->
 
 <div class="page">
   <form
