outro commit da dev

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -3,6 +3,9 @@
 <!-- testando cherry-pick -->
 <!-- testando cherry-pick -->
 <!-- testando cherry-pick -->
+<!-- testando cherry-pick -->
+<!-- testando cherry-pick -->
+<!-- testando cherry-pick -->
 
 <div class="page">
   <form
