commits na branch dev

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -64,3 +64,9 @@
     <button name="submit" type="submit" class="btn-entrar">Entrar</button>
   </form>
 </div>
+
+
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
