mais mudanças em dev

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -70,3 +70,8 @@
 <!-- outras mudanças na branch de dev -->
 <!-- outras mudanças na branch de dev -->
 <!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
+<!-- outras mudanças na branch de dev -->
