--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -3,6 +3,8 @@
 
 <!-- mudanças feitas em DEV -->
 
+<!-- mudanças que eu fiz para nova Feature -->
+
 <div class="page">
   <form
     class="form-login"
