mudanças em HML

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -54,4 +54,4 @@
     </div>
     <button name="submit" type="submit" class="btn-entrar">Entrar</button>
   </form>
-</div>
+</div> mudanças rolando em HML
